More css and fix datepicker on mobile

--- a/lil-bits/src/app/(routes)/select-drinks/drinks.module.css
+++ b/lil-bits/src/app/(routes)/select-drinks/drinks.module.css
@@ -111,6 +111,7 @@
   justify-content: center;
   align-items: center;
   padding: 1rem 0 1rem;
+  margin-bottom: 0.7rem;
   color: #a86e5f;
 }
 
